--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,5 @@ permalink: /blog/:year/:month/:day/:title
 name: Blog of wetson
 description: This is a blog for my study
 url: http://wetson.github.io
+
+safe: false
